# guinotify

./: .gitignore  AboutDialog.py  EventDialog.py  MainDialog.py  MenuBar.py  OptionDialog.py  PKGBUILD  README.md  ScriptDialog.py  guinotify.conf  guinotify.desktop  guinotify.py  install.sh  pyproject.toml  pyproject.toml.st  wxglade.wxg  wxglade2.wxg
guinotify/: AboutDialog.py  MainDialog.py  ScriptDialog.py  __main__.py  guinotify.py
guinotify/locales/: guinotify.pot
guinotify/locales/de/LC_MESSAGES/: guinotify.mo  guinotify.po
locales/: guinotify.pot
locales/de/LC_MESSAGES/: guinotify.po
