[tool.poetry]
name = "guinotify"
version = "0.1.0"
description = "A tiny frontend for inotify"
authors = ["Michael John <michael.john@gmx.at>"]
license = "GPL"
include = ["images/*", "locales/*"]

[tool.poetry.scripts]
poetry = 'guinotify.__main__:main'

[tool.poetry.dependencies]
python = "^3.10"
python-gettext = "^4.0"
requests = "^2.27.1"
wxPython = "^4.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry.core.masonry.api"

[tool.poetry-dynamic-versioning]
enable = false

[tool.poetry.urls]
homepage = "https://github.com/amstelchen/guinotify"
repository = "https://github.com/amstelchen/guinotify"
documentation = "https://github.com/amstelchen/guinotify"
